--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,15 @@
   outline: none;
   box-shadow: 0 0 0 0.25rem rgba(0, 123, 255, 0.25); /* Change the color and properties as needed */
 }
+.flex-container {
+  display: flex;
+  flex-wrap: wrap; /* Allows the items to wrap to the next line if needed */
+  gap: 50px; /* Adds spacing between the items */
+}
+.button {
+  font-size: 15px;
+  transition: transform 0.5s ease;
+}
+.button:hover {
+  transform: scale(1.1);
+}
