--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,3 +18,11 @@
 .button:hover {
   transform: scale(1.1);
 }
+.right {
+  color: black;
+  text-decoration: none;
+  transition: transform 0.5s ease;
+}
+.right:hover {
+  transform: scale(1.3);
+}
