--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,16 @@
   transform: scale(1.3);
 }
 .text {
-  font-size: 10rem;
+  font-style: italic;
+  font-family: monospace;
+  color: darkmagenta;
+  font-size: 40px;
+  font-weight: bold;
+}
+.style {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: crimson;
+  font-size: 40px;
+  font-weight: bold;
 }
 /* y */
