added search by subcategory or category products

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,6 +54,9 @@
   object-fit: cover;
   height: 600px;
 }
+.block {
+  display: block;
+}
 @media (max-width: 870px) {
   .subcategory-list {
     display: flex;
