added shop page and redux setup for shop

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,12 @@
 .block {
   display: block;
 }
+.size {
+  font-size: 150px;
+  color: green;
+  align-items: center;
+}
+
 @media (max-width: 870px) {
   .subcategory-list {
     display: flex;
